[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/comfortaa/SmallTextTheme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/misc/saves/SaveCreator.gd" type="Script" id=3]
[ext_resource path="res://fonts/comfortaa/TextTheme.tres" type="Theme" id=4]

[node name="SaveCreator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 447.0
margin_right = 1920.0
margin_bottom = 484.0
text = "SAV_CR_CREATE"
align = 1

[node name="InfoContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 488.0
margin_right = 1920.0
margin_bottom = 538.0
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/InfoContainer"]
margin_left = 586.0
margin_top = 6.0
margin_right = 874.0
margin_bottom = 43.0
text = "SAV_CR_SVNAME"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/InfoContainer"]
margin_left = 884.0
margin_right = 1334.0
margin_bottom = 50.0
rect_min_size = Vector2( 450, 50 )
theme = ExtResource( 2 )
placeholder_text = "Name in the save menu"
placeholder_alpha = 0.4

[node name="GameContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 542.0
margin_right = 1920.0
margin_bottom = 592.0
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/GameContainer"]
margin_left = 588.0
margin_top = 6.0
margin_right = 872.0
margin_bottom = 43.0
text = "SAV_CR_PLNAME"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/GameContainer"]
margin_left = 882.0
margin_right = 1332.0
margin_bottom = 50.0
rect_min_size = Vector2( 450, 50 )
theme = ExtResource( 2 )
text = "Evie"
placeholder_text = "Name in the game"
placeholder_alpha = 0.4

[node name="DoneButton" type="Button" parent="VBoxContainer"]
margin_top = 596.0
margin_right = 1920.0
margin_bottom = 633.0
text = "SAV_CR_DONE"

[node name="Back" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -88.0
margin_right = 120.0
margin_bottom = -32.0
theme = ExtResource( 4 )
text = "BACK"

[connection signal="pressed" from="VBoxContainer/DoneButton" to="." method="_on_DoneButton_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
